test/library/packages/SortedSet/general/kth/noDefaultValue.good
$CHPL_HOME/modules/packages/SortedSet.chpl:282: In method 'kth':
$CHPL_HOME/modules/packages/SortedSet.chpl:283: error: kth is not available on types that can't be 
                      default-initialized, here: shared Foo
  noDefaultValue.chpl:30: called as (sortedSet(shared Foo,false,DefaultComparator)).kth(k: int(64))
